base/src/test/resources/failure/cubical/face-mismatch.aya.txt
In file $FILE:15:2 ->

  13 |   
  14 |   def counter (A : Type) (u : A) (v : A) (i : I) (j : I) : Partial (~ i ∨ i) A =>
  15 |     {| ~ i  := u | i ∧ j := v |}
     |     ^--------------------------^

Error: The face(s) in the partial element:
         ~ i \/ (j /\ i)
       must cover the face(s) specified in type:
         ~ i \/ i

1 error(s), 0 warning(s).
What are you doing?
